# hs-scheme

./: CHANGELOG.md  LICENSE  README.md  hs-scheme.cabal
hs-scheme/: Main.hs
src/: Context.hs  Evaluation.hs  Extra.hs  LispException.hs  LispVal.hs  Main.hs  Parser.hs  Primitives.hs  Utility.hs
test/: EvaluationSpec.hs  ParserSpec.hs  PrimitivesSpec.hs
