cabal-version:          2.4
name:                   hs-scheme
version:                0.1.0.0
license:                MIT
license-file:           LICENSE
copyright:              (c) 2019 Chad Reynolds
author:                 Chad Reynolds
maintainer:             cjreynol13@aol.com
stability:              alpha
-- homepage:
-- bug-reports:
synopsis:               Implementation of "Write Yourself a Scheme in 48 Hours"
-- description:
category:               Language
tested-with:            GHC == 8.6.3
-- data-files:
extra-source-files:     README.md

-- source-repository head
--  type:               git
--  location:           

executable hs-scheme
    main-is:            Main.hs
    build-depends:        base          ^>= 4.12.0.0
                        , hs-scheme-lib
    -- other-modules:
    hs-source-dirs:     hs-scheme
    -- other-extensions:
    default-language:   Haskell2010
    ghc-options:        -Wall 
                        -Wcompat 
                        -Wincomplete-uni-patterns 
                        -Wincomplete-record-updates 
                        -Wmissing-import-lists

library hs-scheme-lib
    build-depends:        base      ^>= 4.12.0.0
                        , parsec    >=  3.1.13
    exposed-modules:      LispVal
                        , Parser
    -- other-modules:    
    hs-source-dirs:     src
    -- other-extensions
    default-language:   Haskell2010
    ghc-options:        -Wall 
                        -Wcompat 
                        -Wincomplete-uni-patterns 
                        -Wincomplete-record-updates 
                        -Wmissing-import-lists

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-depends:        base          ^>= 4.12.0.0
                        , hspec         >=  2.7.1
                        , hs-scheme-lib
    other-modules:        ParserSpec
    hs-source-dirs:       test
    -- other-extensions:
    default-language:   Haskell2010
    ghc-options:        -Wall
    build-tool-depends: hspec-discover:hspec-discover == 2.*

