cabal-version:          3.0
name:                   hs-scheme
version:                0.1.0.0
license:                MIT
license-file:           LICENSE
copyright:              (c) 2021 Chad Reynolds
author:                 Chad Reynolds
maintainer:             cjreynol13@aol.com
stability:              alpha
homepage:               https://github.com/cjreynol/hs-scheme
bug-reports:            https://github.com/cjreynol/hs-scheme/issues
synopsis:               Implementation of "Write Yourself a Scheme in 48 Hours"
description:            Based on the book here:  https://en.wikibooks.org/wiki/Write_Yourself_a_Scheme_in_48_Hours
category:               Language
tested-with:            GHC == 8.10.7
-- data-files:
extra-source-files:     README.md

source-repository head
    type:               git
    location:           git://github.com/cjreynol/hs-scheme.git

executable hs-scheme
    main-is:            Main.hs
    build-depends:        base          ^>= 4.14.0
                        , text          ^>= 1.2.4
                        , hs-scheme-lib
    -- other-modules:
    hs-source-dirs:     hs-scheme
    default-extensions: OverloadedStrings
    -- other-extensions:   
    default-language:   Haskell2010
    ghc-options:        -Wall 
                        -Wcompat 
                        -Wincomplete-uni-patterns 
                        -Wincomplete-record-updates 
                        -Wmissing-import-lists

library hs-scheme-lib
    build-depends:        base                  ^>= 4.14.0
                        , containers            ^>= 0.6.5
                        , megaparsec            ^>= 9.2.0
                        , mtl                   ^>= 2.2.2
                        , parser-combinators    ^>= 1.3
                        , text                  ^>= 1.2.4
    exposed-modules:      Evaluation
                        , LispException
                        , LispVal
                        , Parser
                        , Primitives
    -- other-modules:      
    hs-source-dirs:     src
    default-extensions: OverloadedStrings
    -- other-extensions:   
    default-language:   Haskell2010
    ghc-options:        -Wall 
                        -Wcompat 
                        -Wincomplete-uni-patterns 
                        -Wincomplete-record-updates 
                        -Wmissing-import-lists

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-depends:        base          ^>= 4.14.0
                        , hspec         >=  2.9.2
                        , hs-scheme-lib
    other-modules:        EvaluationSpec
                        , ParserSpec
                        , PrimitivesSpec
    hs-source-dirs:     test
    default-extensions: OverloadedStrings
    -- other-extensions:   
    default-language:   Haskell2010
    ghc-options:        -Wall
    build-tool-depends: hspec-discover:hspec-discover == 2.*
